# prommis

./: .addheader.yml  .coveragerc  .gitignore  .readthedocs.yml  CITATION.cff  COPYRIGHT.md  LICENSE  LICENSE.md  README.md  codecov.yml  copyright_header.txt  mixer_settler_extraction.json  pyproject.toml  pytest.ini  requirements-dev.txt  silent_checker.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/install/: action.yml
.github/workflows/: core.yml  publish.yml  typos.toml
.pylint/: silent_exception_checker.py
MSContactor_Tutorial/: Diafiltration Tutorial.ipynb
Solvent_Extraction/: REEAqdistribution.py  REEOgdistribution.py  REESXmodel.py  REEdistribution.py  pytestSXmodel.py  testSXmodel.py
UKy_flowsheet/: master_flowsheet.py
UKy_flowsheet/Precipitation/: precip_prop.py  precipitator.py  precipitator_example.ipynb
UKy_flowsheet/Roasting/: feed_roaster_flowsheet.py  oxalate_roaster_flowsheet.py
UKy_flowsheet/Solvent_Extraction/: REEAqdistribution.py  REEOgdistribution.py  REESXmodel.py  pytestSXmodel.py  testSXmodel.py
UKy_flowsheet/Translators/: master_flowsheet_with_recycle.py  translator_SX_leaching.py  translator_SX_precipitator.py  translator_leaching_SX.py
UKy_flowsheet/costing/: ree_plant_capcost.py
UKy_flowsheet/filter_press/: filter_press_flowsheet.py
UKy_flowsheet/leaching/: leach_flowsheet.py  leach_reactions.py
UKy_flowsheet/old_leaching/: leach_flowsheet.py  leach_solids_properties.py  leach_solution_properties.py
custom_pylint/: silent_exception_checker.py
custom_pylint/tests/: test_silent_exception_checker.py
docs/: .gitignore  _config.yml  _toc.yml  api.rst  conf.py  conftest.py  copyright.rst  get_started.md  getting_started.md  index.md  license.rst
docs/examples/: CMI_Process.rst  cmi_process.rst
docs/flowsheets/: uky.rst
docs/superstructure/: superstructure_function_documentation.rst
docs/tools/: connectivity.md
docs/tutorials/: Detail_Chemistry_Model_Integration_Tutorial.ipynb  Diafiltration Cost Uncertainty Quantification and Propagation.ipynb  Diafiltration Tutorial Solution.ipynb  Diafiltration Tutorial.ipynb  byproduct_recovery_determination-solution.ipynb  byproduct_recovery_determination.ipynb  byproduct_recovery_tutorial.ipynb  costing_advanced_features-solution.ipynb  costing_basic_features-solution.ipynb  costing_basic_features.ipynb  costing_uky_flowsheet-solution.ipynb  costing_uky_flowsheet-solution.ipynb.disabled  customized_liquid_properties.py  customized_solids_properties.py  detailed_chemistry_integration_tutorial-solution.ipynb  diafiltration-flowsheet-optimization-tutorial-solution.ipynb  diafiltration-flowsheet-optimization-tutorial.ipynb  diafiltration-solution.ipynb  diafiltration.ipynb  diafiltration_cost_uncertainty_quantification_and_propagation-solution.ipynb  diafiltration_flowsheet_optimization_tutorial-solution.ipynb  intro.md  ree_costing_framework_advanced_features-solution.ipynb  ree_costing_framework_basic_features-solution.ipynb  ree_costing_framework_basic_features.ipynb  ree_costing_framework_uky_flowsheet_demo-solution.ipynb  ree_costing_framework_uky_flowsheet_demo_solution.ipynb  test.ipynb  uky_flowsheet-solution.ipynb  uky_flowsheet-solution.ipynb.disabled  uky_flowsheet.ipynb  uky_flowsheet_idaho.ipynb  uky_flowsheet_low_recovery.py  uky_flowsheet_optimization-solution.ipynb
docs/tutorials/CMI_2025/: Parameter estimation tutorial.ipynb  Precipitator unit model tutorial.ipynb  data_precipitation.csv
leaching/: leach_flowsheet.py  leach_reactions.py  leach_solids_properties.py  leach_solution_properties.py
precipitate/: precip_prop.json  precip_prop.py  precipitator.py  precipitator_example.ipynb
prommis_workspace/Solvent_Extraction/: REEAqdistribution.py  REEOgdistribution.py  REESXmodel.py  SXmodel_flowsheet.py  SolventExtraction.py  pytestSXmodel.py  testSXmodel.py
prommis_workspace/UKy_flowsheet/: UKy_flowsheet_without_recycle.py  master_flowsheet.py
prommis_workspace/UKy_flowsheet/Translators/: translator_SX_leaching.py  translator_SX_precipitator.py  translator_leaching_SX.py  translator_precipitator_SX.py
prommis_workspace/UKy_flowsheet/costing/: REE_costing_parameters.json  ree_plant_capcost.py  ree_test_flowsheet.py
prommis_workspace/UKy_flowsheet/filter_press/: filter_press_solution_properties.py
prommis_workspace/UKy_flowsheet/old_leaching/: leach_reactions.py
prommis_workspace/UKy_flowsheet/tests/: test_UKy_flowsheet.py
prommis_workspace/leaching/: leach_reactions.py  leach_solution_properties.py  test_leach_solids.py
prommis_workspace/precipitate/: precip_prop.py  precipitate_liquid_properties.py  precipitate_solids_properties.py  precipitator.py
prommis_workspace/precipitate/precipitator_simple/: precipitate_liquid_properties.py  precipitator_new.py  test_precipitate_solid.py  test_precipitator.py
prommis_workspace/roasting/: feed_roaster_flowsheet.py  oxalate_roaster_flowsheet.py  ree_feed_roster.py  ree_oxalate_roaster.py  ree_oxalate_roster.py
roasting/: oxalate_roaster_flowsheet.py  ree_feed_roster.py  ree_oxalate_roster.py
src/prommis/: HD_CE.py  __init__.py  _pylint_plugins.py  conftest.py  test_package.py  util.py
src/prommis/CMI_custom_precipitator/: AqueousProperties.py  PrecipitateProperties.py  opt_based_precipitator.py
src/prommis/CMR/: CMR_nf_zo.py  CMR_nf_zo_CMR_liquid_properties.py  CMR_precipitation_flowsheet.py
src/prommis/Solvent_Extraction/: REEAqdistribution.py  SXmodel_flowsheet.py  SolventExtraction.py  test_SXmodel.py
src/prommis/UKy_flowsheet/: UKy_flowsheet.py  autoscaling.py
src/prommis/_sphinx_extensions/: chem.py
src/prommis/_testing_utils/: known_issues.py
src/prommis/chemistry_integration/: Detail_Chemistry_Model_Integration_Tutorial.ipynb  customized_liquid_properties.py
src/prommis/cmi_custom_precipitator/: aqueous_properties.py  opt_based_precipitator.py  precipitate_properties.py
src/prommis/cmi_precipitator/: aqueous_properties.py  opt_based_precipitator.py  precipitate_properties.py
src/prommis/conn/: connectivity.py  excalidraw_model.py  uky_conn.md
(+371 files in other folders)
